# internal/models/new_order.go
@@ -1,0 +1,93 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// NewOrder Параметры нового заказа
+//
+// swagger:model NewOrder
+type NewOrder struct {
+
+	// Сумма заказа
+	// Required: true
+	Amount float64 `json:"amount"`
+
+	// user guid
+	// Required: true
+	// Format: uuid
+	UserGUID strfmt.UUID `json:"user_guid"`
+}
+
+// Validate validates this new order
+func (m *NewOrder) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateAmount(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateUserGUID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *NewOrder) validateAmount(formats strfmt.Registry) error {
+
+	if err := validate.Required("amount", "body", float64(m.Amount)); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *NewOrder) validateUserGUID(formats strfmt.Registry) error {
+
+	if err := validate.Required("user_guid", "body", strfmt.UUID(m.UserGUID)); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("user_guid", "body", "uuid", m.UserGUID.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this new order based on context it is used
+func (m *NewOrder) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *NewOrder) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *NewOrder) UnmarshalBinary(b []byte) error {
+	var res NewOrder
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
